# coder

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
data/src/: hello.cpp
data/src/ABC079/: meson.build
data/src/APG4b/: A.cpp  AA.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  Makefile  N.cpp  O.cpp  P.cpp  R.cpp  S.cpp  T.cpp  U.cpp  V.cpp  W.cpp  Z.cpp  meson.build
data/tasks/: clang  gcc
