project('abc079', 'cpp',
    version : '0.1.0',
    license : 'Apache-2.0',
    meson_version : '>=0.53.2'
)

add_global_arguments(
    '-Weverything',
    '-Wno-c++98-compat',
    '-Wno-sign-conversion',
    '-Wno-sign-compare',
    language: 'cpp'
)

# executable('A', 'A.cpp')
executable('B', 'B.cpp')
# executable('C', 'C.cpp')
# executable('D', 'D.cpp')
# executable('E', 'E.cpp')