project('coder', 'cpp',
    version : '0.1.0',
    license : 'Apache-2.0',
    meson_version : '>=0.53.2',
    default_options : [
        'cpp_std=c++17',
        'warning_level=3'
    ]
)

add_global_arguments(
    '-Weverything',
    '-Wno-c++98-compat',
    '-Wno-sign-conversion',
    '-Wno-sign-compare',
    language: 'cpp'
)

executable('A', 'A.cpp')
executable('B', 'B.cpp')
executable('C', 'C.cpp')
executable('D', 'D.cpp')
executable('E', 'E.cpp')
executable('F', 'F.cpp')
executable('G', 'G.cpp')
executable('H', 'H.cpp')
executable('I', 'I.cpp')
executable('J', 'J.cpp')
executable('K', 'K.cpp')
executable('L', 'L.cpp')
executable('M', 'M.cpp')
executable('N', 'N.cpp')
executable('O', 'O.cpp')
executable('P', 'P.cpp')
# executable('Q', 'Q.cpp')
executable('R', 'R.cpp')
executable('S', 'S.cpp')
executable('T', 'T.cpp')
executable('U', 'U.cpp')
executable('V', 'V.cpp')
executable('W', 'W.cpp')